# ai_chatbot

./: .gitignore  README.md  package.json  pyproject.toml  setup.py
ai_chatbot/: hooks.py  modules.txt
ai_chatbot/ai_chatbot/doctype/chatbot_settings/: chatbot_settings.json
ai_chatbot/ai_chatbot/doctype/conversation/: conversation.json  conversation.py
ai_chatbot/ai_chatbot/doctype/message/: message.json  message.py
ai_chatbot/ai_chatbot/util/: embedding_function.py
ai_chatbot/ai_chatbot/web_form/new_conversation/: new_conversation.json
ai_chatbot/public/frontend/: index.html
ai_chatbot/public/frontend/assets/: index-CMToa8Ki.js  index-DSPIMxeM.js
ai_chatbot/www/: chat.html
frontend/: package.json  proxyOptions.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layouts/: AppSidebar.tsx  NavUser.tsx  SidebarLayout.tsx
frontend/src/features/chat/components/: ChatForm.tsx  ChatList.tsx
frontend/src/features/conversation/components/: ConversationList.tsx  CreateConversation.tsx
frontend/src/features/login/: LoginForm.tsx
frontend/src/pages/: Home.tsx  HomePage.tsx
frontend/src/routes/: index.tsx
frontend/src/types/AiChatbot/: Conversation.ts  Message.ts
