[project]
name = "ai_chatbot"
authors = [
    { name = "Rijosh", email = "rijosh.ravi@phases.io"}
]
description = "AI chat bot"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "pypdf==4.0.0"
    "PyPDF2==3.0.1"
    "pandas==2.2.0"
    "chromadb==0.4.22"
    "google-generativeai==0.3.2"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
